# MCP_server

./: ARCHITECTURE.md  ARCHITECTURE_PHASE2.md  ARCHITECTURE_PHASE3.md  ARCHITECTURE_PHASE4.md  ARCHITECTURE_PHASE6.md  AgentIA.docx  CHANGELOG.md  IMPLEMENTATION_STRATEGY.md  INSTALL.md  PHASE1_COMPLETION_REPORT.md  README.md  SECURITY.md  USECASE2_DEFINITION.md  USECASE3_DEFINITION.md  USECASE4_DEFINITION.md  USECASE6_DEFINITION.md  install.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_phase3.py
data/: tokens.json
data_heatmodel/: audit.json  clients.json  passive_house_model.json  tokens.json
examples/: HEATMODEL_CLIENT_GUIDE.md  README.md  example_client.py  example_heatmodel_client.py  example_tcp_client.py  example_websocket_client.py
mcp_server/: __init__.py  __main__.py
mcp_server/core/: constants.py  mcp_server.py
mcp_server/persistence/: __init__.py  audit_store.py  json_store.py  token_store.py
mcp_server/protocol/: mcp_protocol_handler.py
mcp_server/resources/: client_isolation.py  execution_manager.py  resource_manager.py  safe_namespace.py  sandbox_context.py  sandbox_state.py  subprocess_executor.py
mcp_server/security/: client_context.py  permission.py  permission_manager.py
mcp_server/security/authentication/: __init__.py  client_manager.py  jwt_handler.py
mcp_server/tools/: tool.py  tool_manager.py
mcp_server/transport/: base_transport.py  stdio_transport.py  tcp_transport.py  websocket_transport.py
tests/: test_integration_phase1.py  test_integration_phase2.py  test_phase4_integration.py  test_phase6_integration.py
