[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server"
version = "0.2.0-alpha"
description = "Serveur MCP (Model Context Protocol) sécurisé et modulaire en Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MCP Server Contributors", email = "contact@example.com"}
]
keywords = [
    "mcp", "model context protocol", "ai", "claude",
    "security", "rbac", "permissions", "sandbox"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Security",
    "Topic :: Internet",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    # Optionnel pour Phase 4+
    # "aiohttp>=3.8",
    # "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.7",
    "flake8>=6.0",
    "mypy>=1.4",
    "isort>=5.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-server"
Documentation = "https://github.com/yourusername/mcp-server#documentation"
Repository = "https://github.com/yourusername/mcp-server.git"
Issues = "https://github.com/yourusername/mcp-server/issues"

[tool.setuptools]
packages = ["mcp_server"]

[tool.setuptools.package-data]
mcp_server = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["mcp_server"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "asyncio: tests requiring asyncio",
    "integration: integration tests",
    "security: security-related tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["mcp_server"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
